# bughouse-chess

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker_start.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  check.yml  rust.yml
assets-work/: pieces-HOWTO.txt  render-svg-pieces.py
assets-work/app-logo/: logo-3d.xcf  logo.xcf
assets-work/business-account/: email-icon.xcf
assets-work/fog/: fog1+.xcf  fog1-extended++++.xcf  fog1.xcf
assets-work/fog/cartoonish-tiled/raster/: HOWTO.txt
assets-work/google-signin-buttons/: source.txt
assets-work/pieces-gimp/: king-dark-selection.xcf  king-light-selection.xcf  knight-scaled.xcf  pawn-scaled.xcf  rook-filled++++.xcf  rook-filled+++.xcf  rook-filled++.xcf  rook-filled+.xcf  rook-filled.xcf
assets-work/pieces-large/: black-all-old.xcf  black-all.xcf  shrink.bat  white-all-old.xcf  white-all.xcf
assets-work/sounds/: game-over.tg
bughouse_console/: Cargo.toml  example-test-config.yaml  prod-config-template.yaml  test-config-with-google-auth.yaml  test-config.yaml
bughouse_console/src/: async_server_main.rs  auth.rs  auth_handlers_tide.rs  bughouse_prelude.rs  censor.rs  check_player_name.rs  check_user_name.rs  client_main.rs  client_performance_stats.rs  competitor.rs  database.rs  database_server_hooks.rs  game_stats.rs  history_graphs.rs  http_server_state.rs  lib.rs  load_test.rs  main.rs  network.rs  persistence.rs  private_database.rs  private_persistence.rs  process_bpgn.rs  prod_server_helpers.rs  rusqlite_server_hooks.rs  secret_database.rs  secret_persistence.rs  server_config.rs  server_main.rs  session.rs  session_store.rs  sqlx_server_hooks.rs  stats_handlers_tide.rs  stress_test.rs  tui.rs
bughouse_wasm/: Cargo.toml
bughouse_wasm/src/: bughouse_prelude.rs  chat.rs  html_collection_iterator.rs  lib.rs  rules_ui.rs  svg.rs  table.rs  web_chat.rs  web_document.rs  web_element_ext.rs  web_error_handling.rs  web_iterators.rs  web_util.rs
bughouse_webserver/: Cargo.toml  apache-vhost-example.conf
bughouse_webserver/src/: database.rs  history.rs  lib.rs  main.rs
doc/: oauth.uml
prod/: bh_artifact_deploy  bh_artifact_get  bh_artifact_run_server  bh_build_and_deploy_web  bh_check_servers  bh_force_pull  bh_run_server
prod/configs/: bughouse-handle-failure.service  bughouse-server.service  notify-email@.service
src/: algebraic.rs  altered_game.rs  analysis_engine.rs  board.rs  chalk.rs  chat.rs  chess.rs  client.rs  client_chat.rs  client_main.rs  clock.rs  contest.rs  coord.rs  dirty.rs  display.rs  error.rs  event.rs  fen.rs  force.rs  game.rs  grid.rs  half_integer.rs  heartbeat.rs  iterable_mut.rs  janitor.rs  lib.rs  lobby.rs  main.rs  meter.rs  nanable.rs  network.rs  persistence.rs  pgn.rs  piece.rs  ping_pong.rs  player.rs  role.rs  rules.rs  scores.rs  server.rs  (+11 more)
tests/: altered_game_test.rs  bughouse_game.rs  bughouse_online.rs  chess_game.rs  chess_recordings.rs
tests/common/: mod.rs
tools/: add_competitor_kind.py  gen_session_secret.py  remove_timestamps.py  rename_user.py  test_all_games.py  validate_user_names.py
webserver/: Cargo.toml  apache-vhost-example.conf
webserver/src/: main.rs
www/: .eslintrc.yml  about.html  index.html  index.js  info-page.css  main.css  package-lock.json  package.json  perf_test.js  privacy-policy.html  robots.txt  sitemap.txt  test.css  webpack.config.js
www/about/: index.html
www/privacy-policy/: index.html
