[workspace]
members = [
    ".",
    "bughouse_console",
    "bughouse_wasm",
]

[workspace.dependencies]
anyhow = "^1.0.98"
argon2 = "^0.5.3"
async-std = "^1.13.1"
async-trait = "^0.1.88"
async-tungstenite = "^0.29.1"
censor = "^0.3.0"
chain-cmp = "^0.2.0"
chrono = "^0.4.41"
clap = "^4.5.39"
console = "^0.15.11"
console_error_panic_hook = "^0.1.7"
crossterm = "^0.29.0"
ctrlc = "^3.4.7"
dashmap = "^6.1.0"
derive-new = "^0.7.0"
enum-map = "^2.7.3"
env_logger = "^0.11.8"
futures-io = "^0.3.31"
futures-util = "^0.3.31"
getrandom = "^0.3.3"
git-version = "^0.3.9"
hdrhistogram = "^7.5.4"
http = "^1.3.1"
http-types = "^2.12.0"
humantime = "^2.2.0"
humantime-serde = "^1.1.1"
indoc = "^2.0.6"
instant = "^0.1.13"
itertools = "^0.14.0"
lazy_static = "^1.5.0"
log = "^0.4.27"
lru = "^0.14.0"
ndarray = "^0.16.1"
oauth2 = "^5.0.0"
plotly = "^0.12.1"
pretty_assertions = "^1.4.1"
prometheus = "^0.14.0"
rand = "^0.9.1"
regex-lite = "^0.1.6"
reqwest = "^0.12.19"
scopeguard = "^1.2.0"
serde = "^1.0.219"
serde_json = "^1.0.140"
serde_yaml = "^0.9.34"
skillratings = "^0.27.1"
sqlx = "^0.8.6"
static_assertions = "^1.1.0"
strum = "^0.27"
tide = "^0.16.0"
tide-jsx = "^0.4.0"
time = "^0.3.41"
tungstenite = "^0.26.2"
url = "^2.5.4"
uuid = "^1.17.0"
wasm-bindgen = "^0.2.100"
wasm-bindgen-test = "^0.3.50"
web-sys = "^0.3.77"

# Clippy philosophy. The goal is to have zero warnings from `cargo clippy` on the main branch.
# Thus silencing all warning that I don't want to fix now. These decisions could be revised.
[workspace.lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"
large_enum_variant = "allow"
manual_is_ascii_check = "allow"
new_without_default = "allow"
option_map_unit_fn = "allow"
result_unit_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
useless_format = "allow"  # could look better next to other formats

[package]
name = "bughouse_chess"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2024"

[features]
strict = []  # treat warnings as a build error

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
chain-cmp = { workspace = true }
# We don't use `chrono` ourselves, but some dependencies do. Until recently `chrono` depended
# on `time 0.1.45`, which is affected by https://rustsec.org/advisories/RUSTSEC-2020-0071.
# Bumping the version to fix this.
chrono = { workspace = true }
dashmap = { workspace = true }
derive-new = { workspace = true }
enum-map = { workspace = true, features = ["serde"] }
git-version = { workspace = true }
hdrhistogram = { workspace = true }
indoc = { workspace = true }
instant = { workspace = true, features = ["wasm-bindgen"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
prometheus = { workspace = true }
rand = { workspace = true }
# Improvement potential: Use a static regex compiler to further reduce WASM size.
regex-lite = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["formatting", "macros", "parsing", "serde", "wasm-bindgen"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }

[lints]
workspace = true

[profile.release]
panic = "abort"
strip = true
