[package]
name = "bughouse_console"
version = "0.1.0"
authors = [
    "Andrei Matveiakin <a.matveiakin@gmail.com>",
    "Konstantin Mandelbaum submulticativity@gmail.com",
]
edition = "2021"

[features]
strict = []  # treat warnings as a build error

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-std = { version = "1.12.0", features = ["tokio1"] }
async-tungstenite = "0.23.0"
censor = "0.3.0"
clap = { version = "4.4.5", features = ["cargo"] }
console = "0.15.7"
crossterm = "0.27.0"
ctrlc = "3.4.1"
enum-map = "2.6.3"
env_logger = "0.10.0"
futures-io = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
http-types = { version = "2.12.0", features = ["hyperium_http"] }
humantime = "2.1.0"
instant = "0.1.12"
itertools = "0.11.0"
log = "0.4.20"
oauth2 = "4.4.2"
plotly = "0.8.4"
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
scopeguard = "1.2.0"
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
skillratings = "0.25.0"
sqlx = { version = "0.7.1", features = ["postgres", "sqlite", "runtime-async-std-rustls", "time"] }
tide = "0.16.0"
tide-jsx = "0.4.0"
time = "0.3.29"
tungstenite = "0.20.1"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }

bughouse_chess = { path = ".." }

