[package]
name = "bughouse_console"
version = "0.1.0"
authors = [
    "Andrei Matveiakin <a.matveiakin@gmail.com>",
    "Konstantin Mandelbaum submulticativity@gmail.com",
]
edition = "2024"

[features]
strict = []  # treat warnings as a build error

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
async-std = { workspace = true, features = ["tokio1"] }
async-trait = { workspace = true }
async-tungstenite = { workspace = true }
censor = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
console = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
enum-map = { workspace = true }
env_logger = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
hdrhistogram = { workspace = true }
http = { workspace = true }
http-types = { workspace = true, features = ["hyperium_http"] }
humantime = { workspace = true }
humantime-serde = { workspace = true }
instant = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
oauth2 = { workspace = true }
plotly = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true, features = ["derive"] }
skillratings = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "sqlite", "runtime-async-std-rustls", "time"] }
tide = { workspace = true }
tide-jsx = { workspace = true }
time = { workspace = true }
tungstenite = { workspace = true, features = ["native-tls"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

bughouse_chess = { path = ".." }

[lints]
workspace = true
