[package]
name = "bughouse_wasm"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
strict = []  # treat warnings as a build error

[dependencies]
enum-map = "2.6.3"
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
itertools = "0.11.0"
regex-lite = "0.1.0"
serde_json = "1.0.107"
strum = { version = "0.25", features = ["derive"] }
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.7"

bughouse_chess = { path = ".." }

[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'DomTokenList',
  'Element',
  'FormData',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  'HtmlFormElement',
  'Node',
  'ScrollBehavior',
  'ScrollIntoViewOptions',
  'ScrollLogicalPosition',
  'TextMetrics',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

# Improvement potential: Optimize WASM version for size. This is blocked on the following:
#   - profiles can only be specified in the Cargo workspace root (not here);
#   - we don't want this to affect server build;
#   - wasm-pack cannot use custom cargo profiles: https://github.com/rustwasm/wasm-pack/issues/1111
# [profile.release]
# opt-level = "s"  # optimize for small code size

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']  # add '-g'; workaround for https://github.com/rustwasm/wasm-pack/issues/797
