[package]
name = "bughouse_webserver"
authors = ["Konstantin Mandelbaum submulticativity@gmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.6.5", features = ["attributes"] }
clap = { version = "4.0.29", features = ["cargo", "derive"] }
femme = "2.2.1"
humantime = "2.1.0"
log = "0.4.17"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tide = "0.16.0"
tide-jsx = { version = "0.4.0" }
time = { version = "0.3.17", features = ["formatting"] }

bughouse_chess = { path = ".." }
